Changelog
=========

0.15 - Unreleased
-----------------

* Added ``rebuild`` command to rerun buildout with the last used arguments.
  [fschulze]

0.14 - 2009-04-16
-----------------

* Fixed verbose output of ``checkout`` command.
  [fschulze]

* Added ``-f`` option to ``update`` command to force updates even if the
  working copy is dirty.
  [fschulze]

0.13 - 2009-04-14
-----------------

* Added ``-a`` option to ``update`` command to only update the packages
  declared in the ``auto-checkout`` list.
  [fschulze]

* Added ``activate`` and ``deactivate`` commands. This allows to select which
  packages are added to the ``develop`` option of zc.buildout. Enhanced the
  ``status`` command to show the additional informations.
  [fschulze]

* Switched the meaning of ``~`` and ``C`` in status command.
  [fschulze]

0.12 - 2009-04-14
-----------------

* Added support for Mercurial (hg).
  [mj]

* Refactored working copy logic, so it's easier to add support for other
  version control systems.
  [fschulze]

* Added verbose flag to ``checkout`` and ``update`` commands.
  [fschulze]

0.11 - 2009-04-06
-----------------

* Removed the nice os.path.relpath usage, because it's only been introduced
  with Python 2.6.
  [fschulze]

0.10 - 2009-04-06
-----------------

* Added verbose flag to ``status`` command.
  [fschulze]

* Deprecated ``sources-svn`` and ``sources-git`` in favour of just ``sources``
  which allows more flexibility.
  [fschulze]

* Changed ``status`` command to only check known paths and not the whole
  ``sources-dir`` path.
  [fschulze]

* Add possibility to filter packages in ``update`` and ``status`` commands.
  [fschulze]

* Tell the user at the end of the buildout run whether there have been any
  errors during automatic checkout.
  [fschulze]

* Install the ``develop`` script as the first part instead of the last, so it
  can be used to fix problems.
  [fschulze]

0.9 - 2009-03-30
----------------
